# libacfutils

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README-redist.md  README.md  USAGE.md  XCompile-MinGW.cmake  XCompile.cmake  build_dep.common  build_deps  build_redist  install-macports.sh  install-ubuntu-packages  install-ubuntu-packages-14.04  install-ubuntu-packages-16.04+  pkg-config-deps  ubuntu-packages  vcpkg-configuration.json  vcpkg.json  winlibs_gather  zconf-win64.patch
.github/workflows/: build-multi-platform.yml
SDK/CHeaders/Widgets/: XPWidgets.h
SDK/CHeaders/XPLM/: XPLMDefs.h  XPLMDisplay.h  XPLMInstance.h  XPLMMap.h  XPLMNavigation.h  XPLMPlugin.h  XPLMUtilities.h
SDK/Delphi/Widgets/: XPWidgets.pas
SDK/Delphi/XPLM/: XPLMDefs.pas  XPLMDisplay.pas  XPLMInstance.pas  XPLMMap.pas  XPLMNavigation.pas  XPLMPlugin.pas  XPLMUtilities.pas
SDK/Libraries/Mac/XPLM.framework/: XPLM
SDK/Libraries/Mac/XPLM.framework/Versions/C/: XPLM
SDK/Libraries/Mac/XPWidgets.framework/: XPWidgets
SDK/Libraries/Mac/XPWidgets.framework/Versions/C/: XPWidgets
SDK/Libraries/Win/: XPLM.lib  XPLM_64.lib  XPWidgets.lib  XPWidgets_64.lib
acf_apis/FF_A320/: SharedValue.h
cairo/: .gitignore  build_cairo_deps  cairo-scaled-font-mutex.patch  cairo-win-dllexport.patch  cairo-win-fopen.patch  cairo-win-ulongf.patch  pixman-0.34.0.tar.xz  pixman-0.36.0.tar.bz2  pixman-0.36.0.tar.xz  pixman-test-prng.patch  pixman-visibility.patch
cglm/: build_cglm  cglm-0.4.1.tar.xz  cglm-0.7.9.tar.bz2  cglm-0.7.9.tar.xz  cglm.patch
cmake/: libacfutils-config.cmake.in
curl/: build_curl_deps  curl-7.57.0.tar.xz  curl-7.72.0.tar.xz  curl-8.13.0.tar.bz2  curl-8.2.1.tar.xz  curl-8.4.0.tar.bz2  curl-8.4.0.tar.xz
doc/: Doxyfile
freetype/: .gitignore  build_freetype_deps  freetype-2.8.1.tar.xz  freetype-win-dllexport.patch
geographiclib/: GeographicLib-1.51.tar.bz2  GeographicLib-1.51.tar.xz  build_geographiclib
glew/: build_glew_deps  cmdline_flags.patch  ctx_funcs_1.patch  ctx_funcs_2.patch  dll.patch  experimental_tls.patch  glew-1.13.0.tar.bz2  glew-1.13.0.tar.xz  ld.patch  opengl_4.6.patch
glfw/: build_glfw_deps  glfw-3.2.1.tar.xz  glfw-3.3.8.tar.bz2  glfw-3.3.8.tar.xz  glfw-3.3.tar.xz
include/acfutils/: acf_file.h  airportdb.h  avl_impl.h  chartdb.h  cmd.h  core.h  cursor.h  delay_line.h  dr.h  dr_cmd_reg.h  dsf.h  glctx.h  glew.h  glew_os.h  glutils.h  helpers.h  htbl.h  icao2cc.h  lacf_getline_impl.h  libconfig.h  list.h  list_impl.h  log.h  math.h  math_core.h  mt_cairo_render.h  nl.vert  osrand.h  parser_funcs.h  perf.h  pid_ctl.h  png.h  safe_alloc.h  shader.h  sysmacros.h  taskq.h  tumbler.h  wav.h  wmm.h
junzip/: Makefile  README.md  junzip.c  junzip.h  junzip_demo  junzip_demo.c  junzip_test.c
libclipboard/: build_libclipboard_deps  libclipboard-1.0.tar.bz2  libclipboard-1.0.tar.xz
libiconv/: build_libiconv_deps  libiconv-1.16.tar.bz2  libiconv-1.16.tar.xz
libjpeg/: build_libjpeg_deps  jpegsrc.v9c.tar.bz2  jpegsrc.v9c.tar.xz
libpng/: .gitignore  build_libpng_deps  libpng-1.6.40.tar.bz2  libpng-1.6.40.tar.xz  libpng-1.6.50.tar.bz2
libxml2/: build_libxml2_deps
lzma/C/: 7zTypes.h  Bcj2Enc.c  Lzma2Enc.c  SwapBytes.c
lzma/CPP/7zip/Bundles/LzmaCon/: lzma
lzma/DOC/: lzma-history.txt  lzma-sdk.txt
lzma/qmake/: build-mac  build-win-lin  qmake.pro
msvc_compat/: lacf_msvc_compat.cpp
ocr/: build_ocr_deps  leptonica.patch  tesseract-3.05.00.tar.bz2  tesseract-3.05.00.tar.xz  tesseract-thread.patch
ocr/tub-of-fuck/: lib
openal-soft/: build_openal  cxx_standard.patch  mingw_stdthreads.patch  openal-soft-1.18.2.tar.bz2  openal-soft-1.19.1.tar.bz2  openal-soft-1.20.1.tar.bz2  openal-soft-1.21.0.tar.bz2  sndio.patch  threads_test.cc  visibility.patch  winnt.patch
opus/: build_opus_deps  libogg-1.3.2.tar.bz2  opus-1.2.1.tar.bz2  opus-1.2.1.tar.xz  opusfile-0.7.tar.bz2  opusfile-0.7.tar.xz  opusfile.patch
pcre2/: build_pcre2_deps  pcre2-10.42.tar.xz
qmake/: build-mac  build-win-lin  qmake.pro
rust/: Cargo.toml  build.rs  runclippy.sh
rust/prototypes/: prototype.rs
rust/src/: conf.rs  conv.rs  crc64.rs  delay.rs  geom.rs  icao2cc.rs  lib.rs  log.rs  math.rs  panic.rs  path.rs  phys.rs  pid_ctl.rs  sync.rs  validation.rs  worker.rs
shapelib/: build_shapelib_deps  proj-4.9.3.tar.bz2  proj-4.9.3.tar.xz  shapelib-1.4.1.tar.bz2  shapelib-1.4.1.tar.xz  shapelib-1.6.1.tar.bz2
src/: CMakeLists.txt  GeomagnetismLibrary.c  GeomagnetismLibrary.h  acf_file.c  acf_utils.c  acf_utils.h  acfutils.c  airportdb.c  apps.c  avl.c  avl.h  base64.c  cairo_utils.c  chart_prov_autorouter.c  chart_prov_autorouter.h  chart_prov_common.c  chart_prov_common.h  chart_prov_faa.c  chart_prov_faa.h  chart_prov_navigraph.c  chart_prov_navigraph.h  chartdb.c  chartdb_impl.h  cmd.c  compress.c  compress_7z.c  compress_zip.c  compress_zlib.c  conf.c  core.c  crc64.c  dr.c  dr_cmd_reg.c  dsf.c  except.c  font_utils.c  geom.c  geom.h  glctx.c  glew.c  (+40 more)
src/acfutils/: acf_file.h  acfutils.h  airportdb.h  apps.h  assert.h  avl.h  avl_impl.h  base64.h  cairo_utils.h  chartdb.h  cmd.h  compress.h  conf.h  core.h  crc64.h  cursor.h  delay_line.h  dr.h  dr_cmd_reg.h  dsf.h  except.h  font_utils.h  geom.h  glctx.h  glew.h  glew_os.h  glutils.h  glutils_zink.h  helpers.h  hexcode.h  hp_filter.h  htbl.h  icao2cc.h  intl.h  joystick.h  lacf_getline_impl.h  lacf_gl_pic.h  list.h  log.h  math.h  (+31 more)
src/examples/: drawing_tumblers.c
src/icao2cc/: icao_table.txt  icao_table_parser.sh
src/jsmn/: jsmn_path.h
src/platform/: cursor-lin.c  cursor-mac.m  cursor-win.c
src/prototypes/: prototype.c  prototype.h
src/test/: Makefile  dsfdump.c  rwmutex.c  shpdump.c
ssl/: atexit.patch  atexit_undefined.patch  build_ssl_deps
test/: CMakeLists.txt  airac.c  dsfdump.c  shpdump.c
tools/: mksyms
ucpp/: LICENSE  Makefile  README.md  config.h  cpp.c  cpp.h  eval.c  lexer.c  macro.c  sample.c  tune.h
vcpkg_custom_ports/libclipboard/: fix-libclipboard-cmake.patch
vcpkg_custom_ports/xplane-sdk/: CMakeLists.txt  portfile.cmake  vcpkg.json
zlib/: .gitignore  build_zlib_deps  zlib-1.3.1.tar.bz2
