[package]
name = "acfutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
build-target = "*"

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.108"
